--- a/hyprland.conf
+++ b/hyprland.conf
@@ -10,7 +10,7 @@ exec-once = hyprpaper &
 exec-once = waybar &
 
 env = XCURSOR_SIZE,12
-env = HYPRCURSOR_SIZE,12
+env = XCURSOR_THEME,Bibata-Modern-Classic # https://github.com/ful1e5/Bibata_Cursor
 
 general {
     gaps_in = 5
